# git-sub-resolve

./: Cargo.toml  README.md
src/: main.rs
